Correcty display warning icon.
It doesn't overlap with the "Copy" icon, and is displayed on the same 
line (not in the middle of the block)

--- a/webroot/css/layouts/elements.css
+++ b/webroot/css/layouts/elements.css
@@ -629,12 +629,12 @@ html[dir="rtl"] .comment-sentence .text {
     background: none;
 }
 
-.paging li.prev md-icon, 
+.paging li.prev md-icon,
 .paging li.next md-icon {
     color: #4caf50;
 }
 
-.paging li.prev a:hover md-icon, 
+.paging li.prev a:hover md-icon,
 .paging li.next a:hover md-icon {
     color: #DD8800;
 }
@@ -652,7 +652,7 @@ html[dir="rtl"] .comment-sentence .text {
  * --------------------------------------------------------------------
  */
 
- #private-message-form { 
+ #private-message-form {
     background: #fafafa;
 }
 
@@ -841,7 +841,6 @@ html[dir="rtl"] .comment-sentence .text {
 
 .sentence .copy.column {
     float: right;
-    height: 16px;
 }
 .sentence .copy-btn {
     width: 16px;
@@ -873,11 +872,11 @@ html[dir="rtl"] .comment-sentence .text {
     color: gray;
     width: 24px;
     height: 24px;
-} 
+}
 
 .sentence .favorite-page.column svg:hover{
     color: black;
-} 
+}
 
 .translations .text {
     margin-top: 3px;
@@ -1234,14 +1233,15 @@ input.sentenceId {
     background: url("/img/warning-small.svg") no-repeat;
     padding-right: 25px;
     color: #EE0000;
+    overflow: hidden;
 }
 
 .mainSentence .correctnessNegative1 {
-    background-position: right 5px;
+    background-position: right top 5px;
 }
 
 .translations .correctnessNegative1 {
-    background-position: right 2px;
+    background-position: right top;
 }
 
 .correctness-info .ok,
@@ -1760,7 +1760,7 @@ div.hideLink {
 .loader-small {
     width: 11px;
     height: 11px;
-    border-width: 3px; 
+    border-width: 3px;
 }
 
 .sentence-loader {
